# usb-device-bridge-wsl

./: .gitignore  AGENTS.md  LICENSE  README.md  UsbipdWslAttach.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-installer.yml
packaging/: UsbDeviceBridge.iss  UsbipdWslAttach.iss  pyinstaller_version_info.txt
scripts/: build_installer.ps1  cleanup_usbipd_orphans.cmd  cleanup_usbipd_orphans.ps1
usb_device_bridge/: __init__.py  __main__.py  app_logging.py  auto_attach.py  cli.py  config.py  firewall.py  process.py  single_instance.py  system_package_install.py  updater.py  usbipd.py  version_info.py
usb_device_bridge/ui/: __init__.py  app.py  helpers.py  settings_panel.py  startup_sequence.py  theme.py  theme_picker.py  tray.py
usb_device_bridge/ui/startup/: __init__.py  preferences_prompt.py  shell.py  theme_prompt.py  usb_prompt.py
usb_device_bridge/windows/: __init__.py  admin.py  startup.py
usbipd_attach_manager/: __init__.py  __main__.py  app_logging.py  auto_attach.py  cli.py  config.py  firewall.py  single_instance.py  system_package_install.py  tray_manager.py  ui.py  usbipd.py  version_info.py  windows_admin.py  wsl.py
