[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "usbipd-device-attach-manager"
version = "0.1.0"
description = "USB/IP (usbipd-win) to WSL attachment manager — Flet desktop UI; remembered devices stay attached while running (see AGENTS.md)"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.24.0",
    "pillow>=10.0.0",
    "pystray>=0.19.0",
]

[project.scripts]
usbipd-attach-ui = "usbipd_attach_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["usbipd_attach_manager*"]
